@@ -13,11 +13,11 @@ import logging
 logger = logging.getLogger(__name__)
 
 import os
-from PSCalib.GlobalUtils import load_textfile, save_textfile
+from PSCalib.GlobalUtils import load_textfile, save_textfile, get_login, str_tstamp
 
 FNAME_PANEL_ID_ALIASES = '.aliases.txt'
 
-def alias_for_id(panel_id, fname=FNAME_PANEL_ID_ALIASES):
+def alias_for_id(panel_id, fname=FNAME_PANEL_ID_ALIASES, exp=None, run=None):
     """Returns Epix100a/10ka panel short alias for long panel_id, 
        e.g., for panel_id = 3925999616-0996663297-3791650826-1232098304-0953206283-2655595777-0520093719
        returns 0001
@@ -30,13 +30,16 @@ def alias_for_id(panel_id, fname=FNAME_PANEL_ID_ALIASES):
         if not r: continue # skip empty records
         fields = r.strip('\n').split(' ')
         if fields[1] == panel_id: 
-            logger.debug('found alias %s for panel_id %s\n  in file %s' % (fields[0], panel_id, fname))
+            logger.debug('found alias %s for panel_id %s in %s' % (fields[0], panel_id, fname))
             return fields[0]
         ialias = int(fields[0])
         if ialias>alias_max: alias_max = ialias
         #print(fields)
     # if record for panel_id is not found yet, add it to the file and return its alias
-    rec = '%04d %s\n' % (alias_max+1, panel_id)
+    rec = '%04d %s %s' % (alias_max+1, panel_id, str_tstamp())
+    if exp is not None: rec += ' %10s' %  exp
+    if run is not None: rec += ' r%04d' %  run
+    rec += ' %s\n' % get_login()
     logger.debug('file "%s" is appended with record:\n%s' % (fname, rec))
     save_textfile(rec, fname, mode='a')
     return '%04d' % (alias_max+1)
